# amore-bn254-cortex-m4

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLATION.md  LICENSE  MAY5_WORKING_RELIC.md  README.md  STM32F407VGTX_FLASH.ld
backup_pre_unify/: amore.h  fp12.h  fq.h  g1.h  g2.h
backup_pre_unify/src_1419/: amore_uart.c  fp.c  main.c  pairing_main.c  regression_main.c  syscalls.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
cmake/: toolchain-stm32f4.cmake
doc/: AmorE_BLS12_381_Results.txt  AmorE_BN128_Results.txt  AmorE_Optimization_Plan.md  NRST_DISCOVERY.md  SYSTEM_DOC.md
doc/evidence/: README.md  fp_mul_O2_6ce9f8de.asm  fp_mul_O3_4e2df263.asm
inc/: amore.h  amore_uart.h  bls12_381_const.h  bn128_const.h  curve.h  fp.h  fp12.h  fp2.h  g1.h  g2.h  lowpower.h  pairing_bench.h  regression_test.h  stm32f4xx_hal_conf.h  triggers.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
logs/: relic_bench_O3_20260513.txt
rpi/: server.py
scripts/: build-relic-bls381.sh  build-relic-bn254-asm.sh  build-relic-bn254-easy-O2.sh  build-relic-bn254-easy.sh  build-relic.sh  build_matrix.sh  diagnose_gdb.sh  expected_binaries.json  expected_metrics.json  openocd_itm.cfg  patch_linker.sh  read_results.gdb  regression_test.sh  run_benchmark.sh  run_benchmark.sh.before_full_fix  run_overnight_regression.sh  run_pairing_bench.sh  security_audit.sh
scripts/lib/: cleanup_debuggers.sh
src/: amore.c  amore_uart.c  fp.c  fp12.c  fp2.c  fq.c  g1.c  g2.c  lowpower.c  main.c  micro_bench.c  micro_main.c  pairing_bench.c  pairing_main.c  regression_test.c  startup_stm32f407xx.c  stop_main.c  stop_test_nostop_main.c  wakeup_burst_main.c
tests/: conftest.py  test_c_impl.py  test_paranoid.py
tools/bls12_381_port/: constants_check.txt  fp12_test_vectors.h  fp2_reference.py  fp2_test_vectors.h  fp_reference.py  fp_test_vectors.h  g_test_vectors.h  gen_constants.sage  gen_constants.sage.py  gen_fp12_test_vectors.py  gen_fp2_test_vectors.py  gen_g_test_vectors.py  gen_test_vectors.py  gen_test_vectors.sage  gen_test_vectors.sage.py
tools/bls12_381_port/host_test/: test_fp.c  test_fp12.c  test_fp12_bytes.c  test_fp12_load.c  test_fp2.c  test_g.c  test_gt_pow_q.c
